reservation section modified

--- a/index.html
+++ b/index.html
@@ -1538,7 +1538,7 @@
                         </div>
                         <div style="max-width: 250px; margin-inline: auto">
                             <a href="#" class="default-btn"
-                                >Order Now <span></span
+                                >Book A Table <span></span
                             ></a>
                         </div>
                     </div>
