added meta and title

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="zxx">
     <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
         <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            name="description"
+            content="***OFFICIAL SITE:Delicious Indian food served fresh and hot in Walton-on-Thames. Try from our takeaway delivery feel the real taste of Indian food cooked in authentic Indian spices."
         />
-        <!-- Title -->
-        <title>Brulee - Restaurant Cafe & Fast Food HTML Template</title>
+        <meta name="keywords" content="indian curry,view menu" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Best indian restaurant in Hemel Hempstead</title>
+        <link rel="canonical" href="https://dalchinirestaurant.co.uk/" />
         <!-- Google Fonts -->
         <link
             href="https://fonts.googleapis.com/css2?family=Italianno&display=swap"
@@ -81,7 +83,7 @@
                                 </p>
                                 <p>
                                     <i class="fa fa-mobile-screen-button"></i>
-                                    <a href="tel:01932223319">01932223319</a>
+                                    <a href="tel:01442255226">01442 255 226</a>
                                 </p>
                             </div>
                         </div>
