--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                                 class="banner-btn home-slider-btn"
                                             >
                                                 <a
-                                                    href="#0"
+                                                    href="https://app.dalchinirestaurant.co.uk/#!/"
                                                     class="default-btn-one"
                                                     >Order Online <span></span
                                                 ></a>
@@ -280,7 +280,7 @@
                                                 class="banner-btn home-slider-btn"
                                             >
                                                 <a
-                                                    href="#0"
+                                                    href="https://app.dalchinirestaurant.co.uk/#!/"
                                                     class="default-btn-one"
                                                     >Order Online <span></span
                                                 ></a>
@@ -323,7 +323,7 @@
                                                 class="banner-btn home-slider-btn"
                                             >
                                                 <a
-                                                    href="#0"
+                                                    href="https://app.dalchinirestaurant.co.uk/#!/"
                                                     class="default-btn-one"
                                                     >Order Online <span></span
                                                 ></a>
@@ -386,9 +386,6 @@
                                     src="assets/img/website-img/4.png"
                                     alt=""
                                 />
-                            </div>
-                            <div class="about-img-2">
-                                <img src="assets/img/about-2.jpg" alt="" />
                             </div>
                         </div>
                     </div>
@@ -1546,17 +1543,12 @@
                                 </li>
                                 <li>
                                     <a href="#"
+                                        ><i class="fa-brands fa-instagram"></i
+                                    ></a>
+                                </li>
+                                <li>
+                                    <a href="#"
                                         ><i class="fab fa-twitter"></i
-                                    ></a>
-                                </li>
-                                <li>
-                                    <a href="#"
-                                        ><i class="fab fa-linkedin"></i
-                                    ></a>
-                                </li>
-                                <li>
-                                    <a href="#"
-                                        ><i class="fab fa-youtube"></i
                                     ></a>
                                 </li>
                             </ul>
@@ -1636,8 +1628,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <p>
-                            © 2022 - All Rights Reserved - Designed by
-                            <span class="author-name">Barakah Themes</span>
+                            © 2022 - All Rights Reserved - Developed by
+                            <span class="author-name">Minar Digital</span>
                         </p>
                     </div>
                     <div class="col-lg-6 col-md-6">
